chore(release): APK v0.7.0 (versionCode 7) + diagnostico del fallo de Gradle
El bump queda listo para compilar en local. NO se pudo compilar desde aqui:
el demonio de Gradle arranca, reserva su puerto y muere porque el accept()
falla con 'SocketException: Invalid argument' — filtros Winsock/NDIS de
VirtualBox y adaptadores de Hyper-V en la maquina.

build-local.md: causa raiz con el log, los 6 enfoques ya descartados y la
lista de remedios por probabilidad (netsh winsock reset el primero).

Recordatorio: el rediseno Nocturno ya se ve en el APK actual (carga la web en
vivo). Este APK nuevo solo aporta el tema oscuro nativo que quita el destello
blanco al arrancar.